--- a/pom.xml
+++ b/pom.xml
@@ -30,12 +30,17 @@
 			<artifactId>spring-context-support</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
+			<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>bucuoa.com</groupId>
 			<artifactId>west.rpc.core</artifactId>
 			<version>${west.rpc.version}</version>
+
 		</dependency>
 	</dependencies>
 
